# tweetinstone

./: .gitignore  README.md  build.sh  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
src/tis/: capture.py  initialize.py  main.py  media_ops.py  search.py  traversal.py
src/tis/gui/: main_window.py  search_window.py  stylesheet.py  worker.py
src/tweetinstone/: capture.py  file_ops.py  initialize.py  main.py  media_ops.py  search.py  text_ops.py  traversal.py  version.py
src/tweetinstone/gui/: main_window.py  search_window.py
tests/: demo.txt
