[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "tweetinstone"
dynamic = ["version", "dependencies"]
authors = [
  { name="Max", email="tweetinstone@protonmail.com" }
]
description = "A CLI and GUI tool to automate the capture of tweets in the form they are actually displayed"
keywords = ["twitter", "tweet", "screenshot", "archive", "ffmpeg"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Legal Industry",
	"Natural Language :: English",
	"Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
	"Topic :: Multimedia :: Video :: Conversion",
]

[project.scripts] 
tis = "tweetinstone.main:main_cli"

[project.gui-scripts]
tis-gui = "tweetinstone.main:main_gui"

[project.urls]
Homepage = "https://tweetinstone.com"
Repository = "https://github.com/maxdelayer/tweetinstone"
Documentation = "https://github.com/maxdelayer/tweetinstone/README.md"
Issues = "https://github.com/maxdelayer/tweetinstone/issues"
"Tip Jar" = "https://paypal.me/tweetinstone"

[tool.hatch.version]
path = "src/tweetinstone/version.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]